Fix buttons not showing on light theme

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (prefers-color-scheme: dark) {
+  .bi {
+    fill: white;
+  }
+}
+
 a {
   font-weight: 500;
   color: #646cff;
